--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="https://static.readdy.ai/image/5110ce3ba25b092cb363e0b1bb235016/4ccf1a0137efdb42c5618605ca1bf08a.png" />
+    <link rel="icon" type="image/png" href="pios.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Grupo Scout Apicula – Tienda Oficial | Polvorones y Merchandising Scout</title>
+    <title>Pioneros Apicula – Tienda Oficial | Polvorones y Merchandising Scout</title>
     <meta name="description" content="Tienda oficial del Grupo Scout Apicula. Compra polvorones artesanales, merchandising scout y apoya nuestras actividades. Productos con propósito, campañas especiales y servicios comunitarios." />
     <meta name="keywords" content="grupo scout, scout apicula, polvorones, merchandising scout, tienda scout, productos scout, campañas solidarias" />
     <link rel="canonical" href="https://scoutapicula.org/" />
@@ -13,7 +13,7 @@
     
     <!-- Open Graph / Social Media -->
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Grupo Scout Apicula – Tienda Oficial" />
+    <meta property="og:title" content="Pioneros Apicula – Tienda Oficial" />
     <meta property="og:description" content="Apoya nuestras actividades comprando productos oficiales y participando en nuestras campañas" />
     <meta property="og:url" content="https://scoutapicula.org/" />
     <meta property="og:image" content="https://static.readdy.ai/image/5110ce3ba25b092cb363e0b1bb235016/4ccf1a0137efdb42c5618605ca1bf08a.png" />
