--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="pios.png" />
+    <link rel="icon" type="image/png" href="/images/pios.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pioneros Apicula – Tienda Oficial | Polvorones y Merchandising Scout</title>
     <meta name="description" content="Tienda oficial del Grupo Scout Apicula. Compra polvorones artesanales, merchandising scout y apoya nuestras actividades. Productos con propósito, campañas especiales y servicios comunitarios." />
