--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Grupo Scout Apicula – Tienda Oficial" />
+    <meta name="twitter:title" content="Pioneros Apicula – Tienda Oficial" />
     <meta name="twitter:description" content="Apoya nuestras actividades comprando productos oficiales y participando en nuestras campañas" />
     <meta name="twitter:image" content="https://static.readdy.ai/image/5110ce3ba25b092cb363e0b1bb235016/4ccf1a0137efdb42c5618605ca1bf08a.png" />
     
